# smt-bench

./: .gitignore  Cargo.toml
src/: main.rs  old.rs  trie.rs  utils.rs
