[package]
name = "smt-bench"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sparse-merkle-tree = { git = "https://github.com/nervosnetwork/sparse-merkle-tree", rev = "e9d4be78a772b5c861b0c1ed73887064943da648" }
blake2b-rs = { version = "0.1", optional = true }
rand = "0.7"
rand_chacha = "0.3.1"
gw-db = { git = "https://github.com/nervosnetwork/godwoken" }
gw-common = { git = "https://github.com/nervosnetwork/godwoken" }
gw-config = { git = "https://github.com/nervosnetwork/godwoken" }
gw-store = { git = "https://github.com/nervosnetwork/godwoken" }
gw-types = { git = "https://github.com/nervosnetwork/godwoken" }
# cpuprofiler = "0.0.4"

[profile.release]
debug = true
